fix vite/node/typescript config conflicts to make ugly mvp

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "esnext",
     "lib": ["ES2023"],
-    "module": "ESNext",
+    "module": "es2015",
     "skipLibCheck": true,
     "noEmit": true,
 
     /* Bundler mode */
-    "moduleResolution": "nodenext",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
