--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "cheerio": "^1.1.0",
     "lucide-react": "^0.344.0",
-    "puppeteer": "^24.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -22,19 +20,18 @@
     "@eslint/js": "^9.9.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/cheerio": "^0.22.35",
     "@types/jest": "^30.0.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.4.35",
-    "rollup": "^4.42.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
