--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.344.0",
     "node-html-parser": "^6.1.13",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/cheerio": "^0.22.35",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^30.0.0",
     "@types/jquery": "^3.5.32",
     "@types/react": "^18.3.23",
