--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^30.0.0",
     "@types/jquery": "^3.5.32",
+    "@types/node": "^24.0.10",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.6.0",
